[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Andrew Bjonnes <andrew@abjonnes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc = "aoc:aoc"
